2006-02-01  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyPromptService.cpp:

	Use GTK_STOCK_DIALOG_AUTHENTICATION. Bug #329438.

2006-01-31  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-link-action.c: (ephy_link_action_group_new):
	* src/ephy-link-action.h:

	Fix link action group creating to really use the given name!

2006-01-31  Christian Persch  <chpe@cvs.gnome.org>

	* data/epiphany-service.xml:
	* src/ephy-activation.c: (ephy_activation_load_uris):
	* src/ephy-activation.h:
	* src/ephy-main.c: (unref_proxy_reply_cb), (open_urls):

	Change the DBUS interface to sending all the uris at one
	as string array.

2006-01-31  Peter Harvey  <peter.a.harvey@gmail.com>

	* lib/egg/egg-toolbars-model.c
	* lib/egg/egg-toolbars-model.h
	
	Added a useful function to remove all instances of 
	a named action from the toolbars.

2006-01-31  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2006-01-31  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 1.9.6 ===

	* NEWS:
	* configure.ac:
	* doc/reference/tmpl/ephy-embed.sgml:
	* doc/reference/tmpl/ephy-permission-manager.sgml:
	* doc/reference/tmpl/ephy-shell.sgml:
	* doc/reference/tmpl/epiphany-unused.sgml:

2006-01-31  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmark-properties.c: (show_duplicate_cb):

	Use ngettext here.

2006-01-30  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmark-properties.c
	* src/bookmarks/ephy-bookmarks.c
	* src/bookmarks/ephy-bookmarks.h
	
	Made the 'Similar' button show more bookmarks, and
	separate into 'identical' and 'similar'.

2006-01-30  Christian Persch  <chpe@cvs.gnome.org>

	* lib/egg/egg-editable-toolbar.c: (configure_item_cursor),
	(egg_editable_toolbar_set_ui_manager):

	Don't double-ref the UI manager.
	Don't try to set a cursor on windowless widgets.

2006-01-30  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/mozilla/EphyAboutModule.cpp: (GetErrorMessage):
