@@ -1,3 +1,11 @@
+2006-01-31  Peter Harvey  <peter.a.harvey@gmail.com>
+
+	* lib/egg/egg-editable-toolbar.c
+	
+	Add tooltips to toolitems again (reverses a regression).
+	Use _forall instead of _foreach when connecting signals,
+	to make sure that widgets like Zoom get a right-click menu.
+
 2006-02-01  Christian Persch  <chpe@cvs.gnome.org>
 
 	* embed/mozilla/EphyPromptService.cpp:
